Disable ServiceDialog keyboard scrolling when BidDialog is visible, price validator bug fix, user data request bug fix

--- a/udooapp/src/components/bid/bid.window.component.css
+++ b/udooapp/src/components/bid/bid.window.component.css
@@ -1,4 +1,4 @@
-pid-dialog{
+bid-dialog{
   position: static;
   width: 100%;
   height: 100%;
@@ -7,7 +7,7 @@ pid-dialog{
 }
 
 @media (min-width: 2000px) {
-  .pid-dialog-window {
+  .bid-dialog-window {
     margin-left: 25%;
     width: 50%;
   }
@@ -15,40 +15,40 @@ pid-dialog{
 }
 
 @media (min-width: 961px) {
-  .pid-dialog-window {
+  .bid-dialog-window {
     margin-left: 25%;
     width: 50%;
   }
   .input-container{
     width: auto;
   }
-  .pid-content-container{
+  .bid-content-container{
     margin: 5% 10%;
   }
 }
 
 @media (max-width: 960px) {
-  .pid-dialog-window {
+  .bid-dialog-window {
     width: 50%;
     margin-left: 25%;
   }
 
-  .pid-content-container{
+  .bid-content-container{
     margin: 5% 0;
   }
 }
 
 @media (max-width: 641px) {
-  .pid-dialog-window {
+  .bid-dialog-window {
     width: 80%;
     margin-left: 10%;
   }
-  .pid-content-container{
+  .bid-content-container{
     margin: 12% 5% 5% 5%;
   }
 }
 
-.pid-dialog-background {
+.bid-dialog-background {
   position: fixed;
   margin-top: 60px;
   top: 0;
@@ -58,7 +58,7 @@ pid-dialog{
   background-color: rgba(41, 41, 41, 0.5);
 }
 
-.pid-dialog-window {
+.bid-dialog-window {
   overflow: hidden;
   position: relative;
   top: 0;
@@ -70,7 +70,7 @@ pid-dialog{
 }
 
 
-.pid-dialog-close {
+.bid-dialog-close {
   background: #378281;
   height: 25px;
   position: relative;
@@ -82,7 +82,7 @@ pid-dialog{
   transform: rotate(45deg);
 }
 
-.pid-dialog-close:after {
+.bid-dialog-close:after {
   background: #378281;
   content: "";
   height: 4px;
@@ -93,7 +93,7 @@ pid-dialog{
   width: 25px;
 }
 
-.pid-dialog-close-background {
+.bid-dialog-close-background {
   float: right;
   width: 36px;
   height: 36px;
@@ -102,6 +102,6 @@ pid-dialog{
   cursor: pointer;
 }
 
-.pid-dialog-close-background:hover {
+.bid-dialog-close-background:hover {
   background-color: #E5E5E5;
 }
